--- a/.env.demo
+++ b/.env.demo
@@ -6,10 +6,10 @@
 # Remeber this for all the key and value pairs
 
 #Firebase Configuration
-FIREBASE_API_KEY=AIzaSyBTj33SiVcJWy39z6pfp8-RveLm5PHXwUo
-FIREBASE_AUTH_DOMAIN=flask-f.firebaseapp.com
-FIREBASE_PROJECT_ID=projectId
-FIREBASE_STORAGE_BUCKET=flask-f.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=640005453950
-FIREBASE_APP_ID=1:640005453950:web:477c4c6e1b19a5a1cf802f
-FIREBASE_MEASUREMENT_ID=G-Q41DDR4J82
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MESSAGING_SENDER_ID=
+FIREBASE_APP_ID=
+FIREBASE_MEASUREMENT_ID=
